--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,9 @@
         <div class="pull-right">
           <ul class="nav">
             <li>
+              <a href="{{url_for('searchQuestion')}}">Search</a>
+            </li>
+            <li>
               <a href="{{url_for('askQuestion')}}">Ask</a>
             </li>
             <li>
