--- a/templates/searchQuestion.html
+++ b/templates/searchQuestion.html
@@ -92,7 +92,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="{{url_for('register')}}" class="text-white floating btn btn-round mt--5 bg-orange">>
+                    <a href="{{url_for('register')}}" class="text-white floating btn btn-round mt--5 bg-orange">
                       Sign Up
                     </a>
                   </li>
