--- a/templates/tags.html
+++ b/templates/tags.html
@@ -77,18 +77,12 @@
                         <ul class="nav">
                             {%if 'id' not in session.keys()%}
                             <li>
-                                <a
-                                href="{{url_for('login')}}"
-                                class="text-white floating btn btn-round mt--5 bg-orange"
-                                >
+                                <a href="{{url_for('login')}}" class="text-white floating btn btn-round mt--5 bg-orange">
                                 Login
                                 </a>
                             </li>
                             <li>
-                                <a
-                                href="{{url_for('register')}}"
-                                class="text-white floating btn btn-round mt--5 bg-orange"
-                                >
+                                <a href="{{url_for('register')}}" class="text-white floating btn btn-round mt--5 bg-orange">
                                 Sign Up
                                 </a>
                             </li>
