--- a/templates/questions.html
+++ b/templates/questions.html
@@ -76,7 +76,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="{{url_for('register')}}" class="text-white floating btn btn-round mt--5 bg-orange">>
+                    <a href="{{url_for('register')}}" class="text-white floating btn btn-round mt--5 bg-orange">
                       Sign Up
                     </a>
                   </li>
