added route for pagination

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
               <a href="{{url_for('askQuestion')}}">Ask</a>
             </li>
             <li>
-              <a href="{{url_for('questions',tag='all')}}">Questions</a>
+              <a href="{{url_for('questions',tag='all',page_no=1)}}">Questions</a>
             </li>
             <li>
               <a href="{{url_for('profile')}}">Profile</a>
