more efficient pagination

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -188,7 +188,7 @@
                       {% if page_no!=1 %}
                           <a href="{{url_for('questions',page_no=page_no-1,tag=tag)}}" id="aa" class="previous round" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); margin-right: 50px;">&#8249;</a>
                       {% endif %}
-                      {% if page_no!=end_page %}
+                      {% if not end_page %}
                           <a href="{{url_for('questions',page_no=page_no+1,tag=tag)}}" id="aa" class="next round" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);">&#8250;</a>
                       {% endif %}
               </center>
