--- a/templates/ask.html
+++ b/templates/ask.html
@@ -30,7 +30,7 @@
       .closebtn:hover {
         color: black;
       }
-      </style>
+    </style>
   </head>
   <body>
     <div class="main">
@@ -135,6 +135,7 @@
                         name="body"
                         required="true"
                         placeholder="Please elaborate here..."
+                        rows="7";
                       ></textarea>
                     </div>
                     <div class="">
