--- a/templates/tags.html
+++ b/templates/tags.html
@@ -126,7 +126,7 @@
                                         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
                                         background-color: #f1f1f1;
                                         min-width: 120px;
-                                        cursor:pointer
+                                        cursor: pointer;
                                     }
                                     td:hover {
                                         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
