--- a/templates/profile.html
+++ b/templates/profile.html
@@ -165,7 +165,7 @@
                                             <a class="text-primary" href="{{url_for('quespage',id=id)}}"> {{title}} </a>
                                         </h2>
                                         {% for t in tags[loop.index0] %}
-                                        <button class="btn btn-badge btn-link">{{t}}</button>
+                                        <button class="btn btn-badge btn-link" onclick="location.href='{{url_for('questions',tag=t,page_no=1)}}'">{{t}}</button>
                                         {% endfor %}
                                         <h5 class="text-grey">
                                             Asked by
