--- a/templates/searchQuestion.html
+++ b/templates/searchQuestion.html
@@ -170,7 +170,7 @@
                           <a class="text-primary" href=""> {{q[1]}} </a>
                         </h2>
                         {% for t in tags[loop.index0] %}
-                        <button class="btn btn-badge btn-link">{{t}}</button>
+                        <button class="btn btn-badge btn-link" onclick="location.href='{{url_for('questions',tag=t,page_no=1)}}'">{{t}}</button>
                         {% endfor %}
                         <h5 class="text-grey">
                           Asked by
