rendered quescount and anscount on profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -110,7 +110,7 @@
                                     <img class="statistics__card__icon pull-right"
                                         src="{{ url_for('static',filename='img/question-mark.svg') }}" />
                                     <div class=""></div>
-                                    <div class="statistics__card__value">69</div>
+                                    <div class="statistics__card__value">{{ques_count}}</div>
                                 </div>
                             </div>
                             <!-- ./ statistics -->
@@ -124,7 +124,7 @@
                                     <img class="statistics__card__icon pull-right"
                                         src="{{ url_for('static',filename='img/checklist-on-a-paper-with-a-pencil.svg') }}" />
                                     <div class=""></div>
-                                    <div class="statistics__card__value">69</div>
+                                    <div class="statistics__card__value">{{ans_count}}</div>
                                 </div>
                             </div>
                             <!-- ./ statistics -->
